bugfix: lines will no longer break in the middle of footer nav items

--- a/mgsa.css
+++ b/mgsa.css
@@ -39,6 +39,6 @@ body > footer nav ul
 }
 body > footer nav ul li
 {
-    display: inline;
+    display: inline-block;
     margin: 0 5em;
 }
